--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ candle-core = { version = "0.8.0", default-features = false }
 candle-nn = { version = "0.8.0", default-features = false }
 num-complex = "0.4.6"
 half = "2.4.1"
+itertools = "0.13.0"
 
 [dev-dependencies]
 approx = "0.5"
